--- a/express-app/Dockerfile
+++ b/express-app/Dockerfile
@@ -1,7 +1,20 @@
-FROM node:16
+FROM node:18
+
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm ci --only=production
 
 COPY . .
 
-RUN npm install
+EXPOSE 8080
 
-CMD node index.js
+CMD ["node", "index.js"]
+
+# FROM node:16
+
+# COPY . .
+
+# RUN npm install
+
+# CMD node index.js
